feat(api-gateway): add fault tolerance mechanisms and update Docker configurations
Introduce fault tolerance mechanisms including circuit breaker, retry, rate limiter, and time limiter services to improve API Gateway resilience. Update Dockerfile and docker-compose.yml to support volume mounting and change the startup command. Add new dependencies for fault tolerance and update existing ones.

--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -20,14 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@angular-devkit/schematics-cli": "^19.2.7",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "axios": "^1.8.4",
+    "opossum": "^8.4.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
