--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./api-gateway
       dockerfile: Dockerfile
+    volumes:
+      - ./api-gateway:/usr/src/app
     ports:
       - "3000:3000"
     environment:
