--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,34 +9,103 @@ on:
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         service: [product-service, order-service, customer-service, api-gateway]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: ${{ matrix.service }}/package-lock.json
-      
+
       - name: Install dependencies
         working-directory: ${{ matrix.service }}
         run: npm ci
-      
+
       - name: Lint
         working-directory: ${{ matrix.service }}
         run: npm run lint
-      
+
       - name: Run tests
         working-directory: ${{ matrix.service }}
         run: npm test
-      
+
       - name: Build
         working-directory: ${{ matrix.service }}
         run: npm run build
+
+  # Chỉ triển khai khi push vào nánh chính, không triển khai khi có pull request
+  deploy:
+    needs: test-and-build
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        service: [product-service, order-service, customer-service, api-gateway]
+        include:
+          - service: product-service
+            port: 3001
+          - service: order-service
+            port: 3002
+          - service: customer-service
+            port: 3003
+          - service: api-gateway
+            port: 3000
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          build-args: |
+            SERVICE=${{ matrix.service }}
+            PORT=${{ matrix.port }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest
+
+  # Triển khai lên môi trường production
+  deploy-to-production:
+    needs: deploy
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Triển khai lên server sử dụng SSH
+      - name: Deploy to production server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ${{ secrets.DEPLOY_PATH }}
+            git pull
+            chmod +x deploy.sh
+            ./deploy.sh ${{ secrets.DOCKER_USERNAME }}
+
+      - name: Deployment notification
+        run: echo "Deployment to production completed successfully!"
