ci: add Render deployment configuration for product service
Add Render deployment configuration files including Procfile, render.yaml

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -1,10 +1,13 @@
 {
   "name": "product-service",
   "version": "0.0.1",
-  "description": "",
+  "description": "Product service for microservice architecture",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
